--- a/app/src/main/res/layout/activity_paying_country.xml
+++ b/app/src/main/res/layout/activity_paying_country.xml
@@ -29,7 +29,7 @@
                 android:layout_centerHorizontal="true"
                 android:gravity="center"
                 android:layout_marginRight="6dp"
-                android:text="Sending From"
+                android:text="Sending To"
                 android:textColor="@android:color/black"
                 android:textSize="19sp"
                 android:textStyle="bold"/>
